--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- header -->
     <div class="header">
-      <a href="#" class="logo"><img src="./images/logo.png" alt="로고" /></a>
+      <a href="#" class="logo"><img src="./images/Logo.png" alt="로고" /></a>
       <ul>
         <li><a href="#">People</a></li>
         <li><a href="#">Travel</a></li>
